--- a/testing/index.html
+++ b/testing/index.html
@@ -21,7 +21,7 @@
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
     <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
     <script>
-      var socket = io(https://frozen-waters-93748.herokuapp.com/);
+      var socket = io('https://frozen-waters-93748.herokuapp.com/');
       let payload = new Object();
       payload.uri = 'uri';
       payload.name = 'danny';
