Add support for private chats

--- a/testing/index.html
+++ b/testing/index.html
@@ -26,11 +26,11 @@
 
       let payload = new Object();
       payload.uri = 'uri';
-      payload.name = 'danny';
-      payload.reaction = 'approve';
-      payload.title = 'title';
-      payload.topic = 'topic';
-      payload.bias = 'liberal';
+      payload.name = 'Danny';
+      payload.reaction = 'Approve';
+      payload.title = 'Title';
+      payload.topic = 'Topic';
+      payload.bias = 'Liberal';
       payload = JSON.stringify(payload);
       socket.emit('init', payload);
 
