--- a/testing/index2.html
+++ b/testing/index2.html
@@ -21,8 +21,8 @@
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
     <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
     <script>
-      //var socket = io('https://frozen-waters-93748.herokuapp.com/');
-      var socket = io();
+      var socket = io('https://frozen-waters-93748.herokuapp.com/');
+      //var socket = io();
 
       let payload = new Object();
       payload.uri = 'uri';
